--- a/style.css
+++ b/style.css
@@ -70,6 +70,14 @@ x-letter {
     }
 }
 
+x-word {
+    border-bottom: 1.5px solid transparent;
+    transition: border-color 0.3s ease-in-out;
+    &.marked {
+        border-bottom: var(--red);
+    }
+}
+
 @keyframes blink {
     0%, 25% {
         opacity: 1;
